--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -29,11 +29,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v5
+        uses: docker/bake-action@v4
         with:
-          context: ./buildroot
           push: true
-          builder: ${{ steps.buildx.outputs.name }}
-          tags: ${{ env.IMAGE }}
-          platforms: linux/amd64,linux/arm64
+          workdir: buildroot
