--- a/buildroot/Dockerfile.amd64
+++ b/buildroot/Dockerfile.amd64
@@ -4,12 +4,21 @@ FROM docker.io/hakuturu583/cuda_ros:humble-cuda-12.2.0-devel as build_stage
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update && \
+RUN --mount=type=cache,target=/var/lib/apt apt-get update && \
     apt-get install -y \
     python3-vcstool git python3-colcon-common-extensions python3-rosdep \
     python3-bloom fakeroot \
     debhelper git gpg dh-python reprepro \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+    && rosdep init
+
+RUN mkdir -p /tmp/ws/meta
+COPY package.xml /tmp/ws/meta/package.xml
+COPY rosdep.yaml /tmp/ws/rosdep.yaml
+
+RUN --mount=type=cache,target=/var/lib/apt \
+    echo "yaml file:///tmp/ws/rosdep.yaml" > /etc/ros/rosdep/sources.list.d/61-customized-rosdep.list \
+    && rosdep update \
+    && rosdep install --from-paths /tmp/ws --ignore-src --rosdistro ${ROS_DISTRO} -y \
+    && rm /etc/ros/rosdep/sources.list.d/61-customized-rosdep.list
 
 ENTRYPOINT [ "/bin/bash" ]
