--- a/buildroot/Dockerfile.arm64
+++ b/buildroot/Dockerfile.arm64
@@ -26,4 +26,9 @@ RUN --mount=type=cache,target=/var/lib/apt,sharing=private \
 COPY --from=mimic-host / /mimic-cross
 RUN /mimic-cross/mimic-cross.deno/setup.sh
 
-ENTRYPOINT [ "/bin/bash" ]
+ENV ROS_DISTRO=${ROS_DISTRO}
+
+COPY scripts/ /scripts/
+RUN chmod +x /scripts/entrypoint.bash
+
+ENTRYPOINT [ "/scripts/entrypoint.bash" ]
