--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -19,11 +19,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          cleanup: false
+      # - name: Set up Docker Buildx
+      #   id: buildx
+      #   uses: docker/setup-buildx-action@v3
+      #   with:
+      #     cleanup: false
 
       - name: Build and push
         uses: docker/bake-action@v4
