--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -23,7 +23,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
         with:
-          cleanup: false
+          driver: docker
 
       - name: Build and push
         uses: docker/bake-action@v4
