--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -19,17 +19,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver: docker
-
       - name: Build and push
         uses: docker/bake-action@v4
         with:
           push: true
           workdir: buildroot
+          builder: container
           set: |
             *.cache-to=type=local,dest=/home/f0reach/.buildx-cache
             *.cache-from=type=local,src=/home/f0reach/.buildx-cache
