--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: GPU
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -19,12 +19,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push
         uses: docker/bake-action@v4
         with:
           push: true
           workdir: buildroot
-          builder: container
           set: |
-            *.cache-to=type=local,dest=/home/f0reach/.buildx-cache
-            *.cache-from=type=local,src=/home/f0reach/.buildx-cache
+            *.cache-to=type=gha
+            *.cache-from=type=gha
