--- a/buildroot/Dockerfile.small.amd64
+++ b/buildroot/Dockerfile.small.amd64
@@ -8,8 +8,7 @@ RUN --mount=type=cache,target=/var/lib/apt,sharing=private apt-get update && \
     apt-get install -y \
     python3-vcstool git python3-colcon-common-extensions python3-rosdep \
     python3-bloom fakeroot \
-    debhelper git gpg dh-python \
-    && rosdep init
+    debhelper git gpg dh-python
 
 RUN mkdir -p /tmp/ws/meta
 COPY package.small.xml /tmp/ws/meta/package.xml
