--- a/buildroot/Dockerfile.amd64
+++ b/buildroot/Dockerfile.amd64
@@ -7,7 +7,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN --mount=type=cache,target=/var/lib/apt,sharing=private apt-get update && \
     apt-get install -y \
     python3-vcstool git python3-colcon-common-extensions python3-rosdep \
-    python3-bloom fakeroot \
+    python3-bloom python3-pip fakeroot \
     debhelper git gpg dh-python reprepro \
     && rosdep init
 
