--- a/buildroot/Dockerfile.small.arm64
+++ b/buildroot/Dockerfile.small.arm64
@@ -9,7 +9,7 @@ ENV DENO_NO_UPDATE_CHECK=1
 RUN --mount=type=cache,target=/var/lib/apt,sharing=private apt-get update && \
     apt-get install -y \
     python3-vcstool git python3-colcon-common-extensions python3-rosdep \
-    python3-bloom fakeroot \
+    python3-bloom python3-pip fakeroot \
     debhelper git gpg dh-python
 
 RUN mkdir -p /tmp/ws/meta
