--- a/create_debian_packages/action.yml
+++ b/create_debian_packages/action.yml
@@ -15,3 +15,5 @@ inputs:
 runs:
   using: docker
   image: ghcr.io/fortefibre/buildroot:${{ inputs.rosdistro }}-${{ inputs.platform }}
+  args:
+    - deb
