--- a/buildroot/Dockerfile.small.arm64
+++ b/buildroot/Dockerfile.small.arm64
@@ -18,6 +18,7 @@ COPY rosdep.yaml /tmp/ws/rosdep.yaml
 
 RUN --mount=type=cache,target=/var/lib/apt,sharing=private \
     echo "yaml file:///tmp/ws/rosdep.yaml" > /etc/ros/rosdep/sources.list.d/61-customized-rosdep.list \
+    && apt-get update \
     && rosdep update \
     && rosdep install --from-paths /tmp/ws --ignore-src --rosdistro ${ROS_DISTRO} -y \
     && rm /etc/ros/rosdep/sources.list.d/61-customized-rosdep.list
