--- a/create_debian_packages/action.yml
+++ b/create_debian_packages/action.yml
@@ -20,6 +20,8 @@ runs:
     - name: build
       run: |
         docker run --rm -v $PWD:/workspace -w /workspace -e INPUT_OUR_DIR="${{ inputs.out_dir }}" \
-          -e INPUT_PRE_SCRIPT="${{ inputs.pre_script }}" \
+          -e INPUT_PRE_SCRIPT=$INPUT_PRE_SCRIPT \
           ghcr.io/fortefibre/buildroot:${{ inputs.rosdistro }}-${{ inputs.platform }} deb
+      env:
+        INPUT_PRE_SCRIPT: ${{ inputs.pre_script }}
       shell: bash
