--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -14,6 +14,12 @@ jobs:
     strategy:
       matrix:
         target: [amd64, amd64_small, aarch64, aarch64_small]
+        rosdistro: [humble, jazzy]
+        exclude:
+          - target: amd64
+            rosdistro: jazzy
+          - target: aarch64
+            rosdistro: jazzy
     steps:
       - uses: actions/checkout@v4
 
@@ -39,6 +45,7 @@ jobs:
           set: |
             *.cache-to=type=registry,ref=ghcr.io/fortefibre/buildroot-${{ matrix.target }}-cache,mode=max
             *.cache-from=type=registry,ref=ghcr.io/fortefibre/buildroot-${{ matrix.target }}-cache
+            *.args.ROS_DISTRO=${{ matrix.rosdistro }}
 
   pull:
     runs-on: GPU
