--- a/buildroot/Dockerfile.amd64
+++ b/buildroot/Dockerfile.amd64
@@ -1,6 +1,7 @@
 ARG ROS_DISTRO=humble
+ARG BASE_IMAGE
 
-FROM docker.io/hakuturu583/cuda_ros:humble-cuda-12.2.0-devel as build_stage
+FROM $BASE_IMAGE as build_stage
 
 ENV DEBIAN_FRONTEND=noninteractive
 
