--- a/buildroot/Dockerfile.small.amd64
+++ b/buildroot/Dockerfile.small.amd64
@@ -1,6 +1,6 @@
 ARG ROS_DISTRO=humble
 
-FROM ros:${ROS_DISTRO}-perception-jammy as build_stage
+FROM ros:${ROS_DISTRO}-perception as build_stage
 
 ENV DEBIAN_FRONTEND=noninteractive
 
