--- a/buildroot/Dockerfile.small.arm64
+++ b/buildroot/Dockerfile.small.arm64
@@ -1,7 +1,7 @@
 ARG ROS_DISTRO=humble
 
-FROM --platform=${BUILDPLATFORM} impactaky/mc-ubuntu22.04-${TARGETARCH}-host:2.0.1 AS mimic-host
-FROM ros:${ROS_DISTRO}-perception-jammy as build_stage
+FROM --platform=${BUILDPLATFORM} impactaky/mc-ubuntu22.04-${TARGETARCH}-host:2.3.0 AS mimic-host
+FROM ros:${ROS_DISTRO}-perception as build_stage
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DENO_NO_UPDATE_CHECK=1
