--- a/buildroot/Dockerfile.cross
+++ b/buildroot/Dockerfile.cross
@@ -1,22 +1,22 @@
 ARG ROS_DISTRO=humble
+ARG BASE_IMAGE
+ARG PACKAGE_XML=package.xml
 
 FROM --platform=${BUILDPLATFORM} impactaky/mc-ubuntu22.04-${TARGETARCH}-host:2.3.0 AS mimic-host
-FROM ros:${ROS_DISTRO}-perception as build_stage
+FROM $BASE_IMAGE as build_stage
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV DENO_NO_UPDATE_CHECK=1
-
-COPY --from=mimic-host / /mimic-cross
-RUN /mimic-cross/mimic-cross.deno/setup.sh
 
 RUN --mount=type=cache,target=/var/lib/apt,sharing=private apt-get update && \
     apt-get install -y \
     python3-vcstool git python3-colcon-common-extensions python3-colcon-mixin python3-rosdep \
     python3-bloom python3-pip fakeroot \
-    debhelper git gpg dh-python
+    debhelper git gpg dh-python && \
+    rosdep init
 
 RUN mkdir -p /tmp/ws/meta
-COPY package.small.xml /tmp/ws/meta/package.xml
+COPY ${PACKAGE_XML} /tmp/ws/meta/package.xml
 COPY rosdep.yaml /tmp/ws/rosdep.yaml
 
 RUN --mount=type=cache,target=/var/lib/apt,sharing=private \
@@ -25,6 +25,9 @@ RUN --mount=type=cache,target=/var/lib/apt,sharing=private \
     && rosdep update \
     && rosdep install --from-paths /tmp/ws --ignore-src --rosdistro ${ROS_DISTRO} -y \
     && rm /etc/ros/rosdep/sources.list.d/61-customized-rosdep.list
+
+COPY --from=mimic-host / /mimic-cross
+RUN /mimic-cross/mimic-cross.deno/setup.sh
 
 ENV ROS_DISTRO=${ROS_DISTRO}
 
