--- a/buildroot/Dockerfile.native
+++ b/buildroot/Dockerfile.native
@@ -1,5 +1,6 @@
 ARG ROS_DISTRO=humble
 ARG BASE_IMAGE
+ARG PACKAGE_XML=package.xml
 
 FROM $BASE_IMAGE as build_stage
 
@@ -9,11 +10,11 @@ RUN --mount=type=cache,target=/var/lib/apt,sharing=private apt-get update && \
     apt-get install -y \
     python3-vcstool git python3-colcon-common-extensions python3-colcon-mixin python3-rosdep \
     python3-bloom python3-pip fakeroot \
-    debhelper git gpg dh-python reprepro \
-    && rosdep init
+    debhelper git gpg dh-python && \
+    rosdep init
 
 RUN mkdir -p /tmp/ws/meta
-COPY package.xml /tmp/ws/meta/package.xml
+COPY ${PACKAGE_XML} /tmp/ws/meta/package.xml
 COPY rosdep.yaml /tmp/ws/rosdep.yaml
 
 RUN --mount=type=cache,target=/var/lib/apt,sharing=private \
