--- a/buildroot/Dockerfile.cross
+++ b/buildroot/Dockerfile.cross
@@ -13,7 +13,7 @@ RUN --mount=type=cache,target=/var/lib/apt,sharing=private apt-get update && \
     python3-vcstool git python3-colcon-common-extensions python3-colcon-mixin python3-rosdep \
     python3-bloom python3-pip fakeroot \
     debhelper git gpg dh-python && \
-    rosdep init
+    if [ ! -f /etc/ros/rosdep/sources.list.d/20-default.list ]; then rosdep init; fi
 
 RUN mkdir -p /tmp/ws/meta
 COPY ${PACKAGE_XML} /tmp/ws/meta/package.xml
