--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+
       - name: Build and push
         uses: docker/bake-action@v4
         with:
