--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -24,6 +24,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Change data-dir
+        run: |
+          sudo systemctl stop docker
+          sudo rm -rf /var/lib/docker
+          sudo mkdir /mnt/docker
+          sudo ln -s /mnt/docker /var/lib/docker
+          sudo systemctl start docker
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -36,9 +44,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Free Disk Space (Ubuntu)
-        uses: jlumbroso/free-disk-space@main
 
       - name: Build and push
         uses: docker/bake-action@v4
