Fix apt update script

--- a/update_apt_repo/action.yml
+++ b/update_apt_repo/action.yml
@@ -19,6 +19,7 @@ inputs:
     description: "GPG fingerprint"
   codename:
     description: Ubuntu codename
+    default: "jammy"
 
 runs:
   using: "docker"
