--- a/buildroot/Dockerfile.native
+++ b/buildroot/Dockerfile.native
@@ -24,6 +24,9 @@ RUN --mount=type=cache,target=/var/lib/apt,sharing=private \
     && rosdep install --from-paths /tmp/ws --ignore-src --rosdistro ${ROS_DISTRO} -y \
     && rm /etc/ros/rosdep/sources.list.d/61-customized-rosdep.list
 
+RUN --mount=type=cache,target=/var/lib/apt,sharing=private apt-get install -y \
+    colcon-lcov-result colcon-coveragepy-result
+
 ENV ROS_DISTRO=${ROS_DISTRO}
 
 COPY scripts/ /scripts/
