--- a/buildroot/Dockerfile.native
+++ b/buildroot/Dockerfile.native
@@ -25,7 +25,7 @@ RUN --mount=type=cache,target=/var/lib/apt,sharing=private \
     && rm /etc/ros/rosdep/sources.list.d/61-customized-rosdep.list
 
 RUN --mount=type=cache,target=/var/lib/apt,sharing=private apt-get install -y \
-    colcon-lcov-result colcon-coveragepy-result
+    python3-colcon-lcov-result python3-colcon-coveragepy-result
 
 ENV ROS_DISTRO=${ROS_DISTRO}
 
