Remove unused image

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -15,11 +15,7 @@ jobs:
       matrix:
         target:
           [
-            "humble_large",
-            "humble_large_cross",
-            "humble_small",
-            "humble_small_cross",
-            "jazzy_small",
+            "jazzy_small"
           ]
     steps:
       - uses: actions/checkout@v4
@@ -61,7 +57,5 @@ jobs:
     steps:
       - name: Pull latest images
         run: |
-          docker pull ghcr.io/fortefibre/buildroot:humble-large
           docker pull ghcr.io/fortefibre/buildroot:jazzy-small
-          docker pull --platform linux/arm64/v8 ghcr.io/fortefibre/buildroot:humble-large-cross
           docker system prune -f
