--- a/buildroot/Dockerfile.native
+++ b/buildroot/Dockerfile.native
@@ -10,7 +10,7 @@ RUN --mount=type=cache,target=/var/lib/apt,sharing=private apt-get update && \
     apt-get install -y \
     python3-vcstool git python3-colcon-common-extensions python3-colcon-mixin python3-rosdep \
     python3-bloom python3-pip fakeroot \
-    debhelper git gpg dh-python && \
+    debhelper git gpg dh-python unzip gcovr && \
     if [ ! -f /etc/ros/rosdep/sources.list.d/20-default.list ]; then rosdep init; fi
 
 RUN mkdir -p /tmp/ws/meta
