--- a/buildroot/Dockerfile.native
+++ b/buildroot/Dockerfile.native
@@ -6,6 +6,8 @@ FROM $BASE_IMAGE as build_stage
 
 ENV DEBIAN_FRONTEND=noninteractive
 
+RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
+
 RUN --mount=type=cache,target=/var/lib/apt,sharing=private apt-get update && \
     apt-get install -y \
     python3-vcstool git python3-colcon-common-extensions python3-colcon-mixin python3-rosdep \
