--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -49,6 +49,7 @@ jobs:
         with:
           push: true
           workdir: buildroot
+          source: buildroot
           targets: ${{ matrix.target }}
           set: |
             *.cache-to=type=registry,ref=ghcr.io/fortefibre/buildroot-${{ matrix.target }}-cache,mode=max
