--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,5 +1,4 @@
-name: Build docker image for package building
-
+name: Build multi-architecture image
 on:
   workflow_dispatch: {}
   push:
@@ -7,19 +6,26 @@ on:
       - main
     paths:
       - "buildroot/**"
+      - ".github/workflows/build-image.yml"
+
+env:
+  REGISTRY_IMAGE: ghcr.io/fortefibre/buildroot
 
 jobs:
   build:
     runs-on: ${{ matrix.runs-on }}
     strategy:
       matrix:
+        runs-on: [ubuntu-24.04, ubuntu-24.04-arm]
         include:
-          - target: jazzy-small
+          - target: jazzy
+            tag: jazzy-small
             runs-on: ubuntu-24.04
-          # - target: jazzy-small-arm
-          #   runs-on: ubuntu-24.04-arm
-          - target: humble-small
-            runs-on: ubuntu-24.04
+            platform: linux/amd64
+          - target: jazzy
+            tag: jazzy-small
+            runs-on: ubuntu-24.04-arm
+            platform: linux/arm64
     steps:
       - uses: actions/checkout@v6
 
@@ -31,9 +37,6 @@ jobs:
           sudo ln -s /mnt/docker /var/lib/docker
           sudo systemctl start docker
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -44,23 +47,78 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
-        uses: docker/bake-action@v6
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          push: true
-          workdir: buildroot
-          source: .
-          targets: ${{ matrix.target }}
-          set: |
-            *.cache-to=type=registry,ref=ghcr.io/fortefibre/buildroot-${{ matrix.target }}-cache,mode=max
-            *.cache-from=type=registry,ref=ghcr.io/fortefibre/buildroot-${{ matrix.target }}-cache
+          images: ${{ env.REGISTRY_IMAGE }}
 
-  pull:
-    runs-on: GPU
-    needs: build
-    steps:
-      - name: Pull latest images
+      - name: Build and push by digest
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          context: ./buildroot
+          platforms: ${{ matrix.platform }}
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=image,name=${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }},push-by-digest=true,name-canonical=true,push=true
+          cache-from: type=registry,ref=ghcr.io/fortefibre/buildroot-${{ matrix.target }}-${{ matrix.runs-on }}-cache
+          cache-to: type=registry,ref=ghcr.io/fortefibre/buildroot-${{ matrix.target }}-${{ matrix.runs-on }}-cache,mode=max
+          build-args: |
+            ROS_DISTRO=${{ matrix.target }}
+
+      - name: Export digest
         run: |
-          docker pull ghcr.io/fortefibre/buildroot:jazzy-small
-          docker pull ghcr.io/fortefibre/buildroot:humble-small
-          docker system prune -f
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+
+      - name: Prepare
+        run: |
+          platform=${{ matrix.platform }}
+          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+
+      - name: Upload digest
+        uses: actions/upload-artifact@v6
+        with:
+          name: digests-${{ matrix.tag }}-${{ env.PLATFORM_PAIR }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    strategy:
+      matrix:
+        include:
+          - tag: jazzy-small
+    steps:
+      - name: Download digests
+        uses: actions/download-artifact@v7
+        with:
+          path: /tmp/digests
+          pattern: digests-${{ matrix.tag }}-*
+          merge-multiple: true
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create manifest list and push
+        working-directory: /tmp/digests
+        run: |
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
