--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -17,14 +17,13 @@ jobs:
     strategy:
       matrix:
         runs-on: [ubuntu-24.04, ubuntu-24.04-arm]
+        base-image: [docker.io/library/ros:jazzy-perception]
+        target: [jazzy]
+        tag: [jazzy-small]
         include:
-          - target: jazzy
-            tag: jazzy-small
-            runs-on: ubuntu-24.04
+          - runs-on: ubuntu-24.04
             platform: linux/amd64
-          - target: jazzy
-            tag: jazzy-small
-            runs-on: ubuntu-24.04-arm
+          - runs-on: ubuntu-24.04-arm
             platform: linux/arm64
     steps:
       - uses: actions/checkout@v6
@@ -65,6 +64,7 @@ jobs:
           cache-to: type=registry,ref=ghcr.io/fortefibre/buildroot-${{ matrix.target }}-${{ matrix.runs-on }}-cache,mode=max
           build-args: |
             ROS_DISTRO=${{ matrix.target }}
+            BASE_IMAGE=${{ matrix.base-image }}
 
       - name: Export digest
         run: |
