--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -121,3 +121,12 @@ jobs:
         working-directory: /tmp/digests
         run: |
           docker buildx imagetools create -t ${{ env.REGISTRY_IMAGE }}:${{ matrix.tag }} $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
+
+  pull:
+    runs-on: GPU
+    needs: build
+    steps:
+      - name: Pull latest images
+        run: |
+          docker pull ghcr.io/fortefibre/buildroot:jazzy-small
+          docker system prune -f
