fix secret options

--- a/.github/workflows/renew-gpg-key.yml
+++ b/.github/workflows/renew-gpg-key.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Export updated private key and update secret
         if: steps.check.outputs.extended == 'true'
         run: |
-          gh secret set GPG_KEY --body "$(gpg --armor --export-secret-keys "$fingerprint")"
+          gh secret set GPG_KEY --app actions --org Fortefibre --visibility all --body "$(gpg --armor --export-secret-keys "$fingerprint")"
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
 
